syntax = "proto3";

package Metadata;

option java_package = "edu.msu.cse.dkvf.metadata";
option java_outer_classname = "Metadata";

// edge-index dependencies
message Edge {
  int32 vertex1 = 1;
  int32 vertex2 = 2;
}

message Dependency {
  Edge edge = 1;
  int64 version = 2; // represents the timestamp of edge (server vertex1 to server vertex2).
}

// No need to maintain a version variable for the server.
// Edge-index timestamps guarantee the consistency.
message Record {
  bytes value = 1;
  int32 clientId = 2;
  int64 sourceOpIdx = 3;
}

//-----------------------Client Message-------------------
message GetMessage {
  string key = 1;
}

message PutMessage {
  string key = 1;
  Record value = 2;
}

message ClientMessage {
  oneof message_type {
    GetMessage get_message = 1;
    PutMessage put_message = 2;
  }
}

//-----------------------Client Reply----------------------
message GetReply {
  bool status = 1;
  Record record = 2;
}

message PutReply {
  bool status = 1;
  int64 opIdx = 2;
}

message ClientReply {
  oneof message_type {
    GetReply get_reply = 1;
    PutReply put_reply = 2;
  }
}

//-------------------------Server Message--------------------
// the update message send to each other replica which contains the key
message ReplicateMessage {
  string key = 1;
  Record rec = 2;
  int32 serverId = 3;
  repeated Dependency timestamps = 4;
}

message ServerMessage {
  ReplicateMessage replicate_message = 1;
}